# ht_measurements

./: README.md  app_struct.txt  pyproject.toml
ht_measurements/: hooks.py  modules.txt  patches.txt
ht_measurements/ht_measurements/api/: v1.py
ht_measurements/ht_measurements/doctype/ht_alerts/: ht_alerts.js  ht_alerts.json  ht_alerts.py  test_ht_alerts.py
ht_measurements/ht_measurements/doctype/ht_customer_details/: ht_customer_details.js  ht_customer_details.json  ht_customer_details.py  test_ht_customer_details.py
ht_measurements/ht_measurements/doctype/ht_invoice/: ht_invoice.js  ht_invoice.json  (+2 more)
ht_measurements/patches/: cancel_and_delete.py
ht_measurements/public/css/: custom.css
ht_measurements/templates/: base.html  ht_app_base.html
ht_measurements/www/ht_app/: customer_details.html  customer_details.js  customer_details.py  first_screen.css  first_screen.html  jacket_style.html  jacket_style.py  measurements.css  measurements.html  measurements.py  old_style_sheet_profiles_old.html  shirt_measurement.html  shirt_measurement.py  shirt_style.html  store_selection.css  store_selection.html  store_selection.py  style_sheet.html  style_sheet.py  style_sheet_profiles.html  trouser_style.css  trouser_style.html  trousers_measurement.html
ht_measurements/www/portal/: index.html  index.js  index.py  invoice_form.html  invoice_form.js  invoice_form.py  shirt_measurements.html  shirt_measurements.js  shirt_measurements.py  store_selection.html  store_selection.js  store_selection.py
ht_measurements/www/somepage/: index.css  index.html  index.js
(+62 files in other folders)
